fixed swipe not working on mobile slider, started mobile view for hero section

--- a/public/stylesheets/boilerplate.css
+++ b/public/stylesheets/boilerplate.css
@@ -33,9 +33,12 @@ main {
 /* BUTTON =================================================== */
 
 .default-button {
+    width: 100%;
+    height: 100%;
     font-size: 16px;
     border-radius: 33px;
     padding: 4px 10px;
+    background-color: white;
     border: 2px solid white;
     box-sizing: border-box;
     display: inline-flex;
