--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -36,6 +36,14 @@
     font-size: 2.5em;
 }
 
+.desktop-break {
+    display: inline;
+  }
+
+  .mobile-break {
+    display: none;
+  }
+
 .hero__title-line-break {
     display: flex;
     flex-direction: row;
@@ -61,6 +69,7 @@
     width: fit-content;
     height: fit-content;
     padding: 0px 11px 2px;
+    white-space: nowrap;
 }
 
 @media(max-width: 1145px) {
@@ -76,7 +85,7 @@
     }
 }
 
-@media (max-width: 610px) {
+/* @media (max-width: 610px) {
     .hero__title {
         font-size: 2em;
     }
@@ -94,13 +103,22 @@
         width: 100%;
         margin-right: 20px;
     }
-}
+} */
 
 @media (max-width: 390px) {
     .hero__title {
         min-width: none;
         font-size: 2em;
     }
+    .mobile-break {
+        display: inline;
+      }
+      .hero__title-line-break {
+        display: inline;
+    }
+    .desktop-break {
+        display: none;
+      }
 }
 
 
@@ -165,6 +183,7 @@
 .hero__dot-indicator-container {
     display: flex;
     align-items: center;
+    gap: 10px;
 }
 
 .hero__dot-indicator {
@@ -251,7 +270,7 @@
     margin-left: auto;
 }
 
-@media(max-width: 970px) {
+@media(max-width: 490px) {
     .hero__track-container {
         position: absolute;
     }
@@ -260,6 +279,48 @@
         height: auto;
         object-fit: cover;
     }
+}
+
+/* Show mobile breaks on smaller screens */
+@media (max-width: 767px) {
+  
+}
+
+@media(max-width: 390px) {
+    .hero__section {
+        padding-bottom: 5px;
+    }
+
+    .hero__title-and-nav {
+        padding-top: 0px;
+    }
+
+    .hero__nav-container {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .hero__slider-pause-button {
+        display: none;
+    }
+    
+    .hero__dot-indicator-container {
+        gap: 15px;
+    }
+
+    .hero__arrow {
+        display: none;
+    }
+
+    .default-button-link {
+        width: 100%;
+        height: 40px;
+    }
+
+    .default-button {
+        width: 100%;
+    }
+
 }
 
 
